--- a/testcasesui/package.json
+++ b/testcasesui/package.json
@@ -4,7 +4,7 @@
   "description": "react d3js testcase visualization",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "webpack-dev-server --mode development --env dev --open --hot",
     "build": "webpack --mode development --env dev",
     "prod": "webpack --mode production --env prod",
     "test": "echo \"Error: no test specified\" && exit 1"
