--- a/testcasesui/package.json
+++ b/testcasesui/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "d3": "^5.16.0",
     "history": "^5.0.0",
+    "moment": "^2.29.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
